z-index 2 the fixed header

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -34,6 +34,7 @@ header {
 	width: 100vw;
     background: white;
     border-bottom: 1px solid #efefef;
+    z-index: 2;
 }
 
 header nav {
